# QT5-QUICK-TEMPLATE

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
template-app/: main.cpp
template-app/resources/: qml.qrc
template-app/resources/template-qml/: app.qml
